<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smart Anchor Watch</string>
    <string name="app_notification">Smart Anchor Watch: On</string>
    <string name="action_settings">Settings</string>
    <string name="action_restore_settings">Restore Settings</string>
    <string name="action_exit">Exit</string>
    <string name="simulate">Simulate</string>
    <string name="simulate_sum">Simulates anchorage without using GPS</string>
    <string name="alarm_tone">Alarm Tone</string>
    <string name="alarm_tone_sum">Tone that sounds when alarm</string>
    <string name="anchor_alarm_dialog_title">Anchor is outside safe sector</string>
    <string name="accuracy_alarm_dialog_title">No (accurate) GPS Signal</string>
    <string name="alarm_dialog_exit">Exit Application</string>
    <string name="alarm_dialog_mute">Mute</string>
    <string name="mute_time">Mute Time</string>
    <string name="mute_time_sum">How many minutes alarm is muted</string>
    <string name="minutes_format">%d Minutes</string>
    <string name="accuracy_alarm_time">Accuracy Alarm Time</string>
    <string name="accuracy_alarm_time_sum">Time after alarm starts for not having accurate locations</string>
    <string name="distance_unit">Distance Unit</string>
    <string name="distance_unit_sum">Distance Unit</string>
    <string name="distance_unit_meters">m</string>
    <string name="distance_unit_feet">ft</string>
    <string name="distance_unit_short_format_meters">%.0f m</string>
    <string name="distance_unit_short_format_feet">%.0f ft</string>
    <string name="distance_unit_format_meters">%d Meters</string>
    <string name="distance_unit_format_feet">%d Feet</string>
    <string name="distance_unit_default">@string/distance_unit_meters</string>
    <string-array name="distance_unit_entries">
        <item>Meters</item>
        <item>Feet</item>
    </string-array>
    <string-array name="distance_unit_values">
        <item>@string/distance_unit_meters</item>
        <item>@string/distance_unit_feet</item>
    </string-array>
    <string name="accuracy">Minimum Accuracy</string>
    <string name="accuracy_sum">Minimum GPS accuracy</string>
    <string name="gps_max_sleep_time">GPS Maximum Sleep</string>
    <string name="gps_max_sleep_time_sum">GPS Maximum Sleeping Time in Seconds</string>
    <string name="seconds_format">%d Seconds</string>
    <string name="action_set_location">Set Location</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
</resources>