<?xml version="1.0" encoding="UTF-8"?>
<!--
Copyright (C) 2014 Timo Vesalainen

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->


<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/org.vesalainen.boatwatch"
>
    <ListPreference
        android:key="pref_distance_unit"
        android:title="@string/distance_unit"
        android:summary="@string/distance_unit_sum"
        android:entries="@array/distance_unit_entries"
        android:entryValues="@array/distance_unit_values"
        android:defaultValue="@string/distance_unit_default" />
    />
    <RingtonePreference
        android:key="pref_alarmtone"
        android:title="@string/alarm_tone"
        android:summary="@string/alarm_tone_sum"
        android:ringtoneType="alarm"
        android:showDefault="true" />
    />
    <org.vesalainen.boatwatch.NumberPickerPreference
        android:key="pref_mute_time"
        android:title="@string/mute_time"
        android:summary="@string/mute_time_sum"
        custom:minValue="1"
        custom:maxValue="30"
        custom:defValue="5"
        custom:format="@string/mute_time_format"
    />
    <org.vesalainen.boatwatch.DistancePickerPreference
        android:key="pref_accuracy"
        android:title="@string/accuracy"
        android:summary="@string/accuracy_sum"
        custom:minValue="1"
        custom:maxValue="30"
        custom:defValue="1"
    />
    <CheckBoxPreference
        android:key="pref_simulate"
        android:title="@string/simulate"
        android:summary="@string/simulate_sum"
        android:defaultValue="false" />
</PreferenceScreen>